--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,11 @@ Flask = "^1.0"
 pynamodb = "^3.3"
 
 [tool.poetry.dev-dependencies]
+black = {version = "^18.3-alpha.0",allows-prereleases = true}
+
+[tool.black]
+line-length = 88
+py36 = true
 
 [build-system]
 requires = ["poetry>=0.12"]
