Write initial tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.6"
 Flask = "^1.0"
 pynamodb = "^3.3"
 python-dotenv = "^0.10.1"
+Flask-Testing = "^0.7.1"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^18.3-alpha.0",allows-prereleases = true}
