--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ Flask-Testing = "^0.7.1"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^18.3-alpha.0",allows-prereleases = true}
+coverage = "^4.5"
 
 [tool.black]
 line-length = 88
