Add missing dependencies for google auth

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ license = "ISC"
 python = "^3.6"
 Flask = "^1.0"
 pynamodb = "^3.3"
+authlib = "^0.11.0"
+google-auth = "^1.6"
+google-api-python-client = "^1.7"
 python-dotenv = "^0.10.1"
 Flask-Testing = "^0.7.1"
 
