--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ google-auth = "^1.6"
 google-api-python-client = "^1.7"
 python-dotenv = "^0.10.1"
 Flask-Testing = "^0.7.1"
+flask-wtf = "^0.14.2"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^18.3-alpha.0",allows-prereleases = true}
