--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ coverage = "^4.5"
 
 [tool.black]
 line-length = 88
-py36 = true
+target_version = ["py36"]
 
 [build-system]
 requires = ["poetry>=0.12"]
