Check code formatting during CI with black

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_script:
   - cp .env-sample .env
 
 script:
+  - poetry run black . --check
   - poetry run coverage run -m unittest
 
 after_success:
