--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ zappa = "^0.48.2"
 [tool.poetry.dev-dependencies]
 black = {version = "^19.3b0",allows-prereleases = true}
 coverage = "^4.5"
+pyupgrade = "^1.23"
 
 [tool.black]
 line-length = 88
