--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ flask-wtf = "^0.14.2"
 zappa = "^0.48.2"
 
 [tool.poetry.dev-dependencies]
-black = {version = "^19.10b0",allows-prereleases = true}
+black = {version = "^19.10b0",allow-prereleases = true}
 coverage = "^5.0"
 pyupgrade = "^1.26"
 
@@ -27,5 +27,5 @@ line-length = 88
 target_version = ["py36"]
 
 [build-system]
-requires = ["poetry>=0.12"]
+requires = ["poetry>=1.0"]
 build-backend = "poetry.masonry.api"
