Remove allow-preleases for black

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ flask-wtf = "^0.14.3"
 zappa = "^0.51.0"
 
 [tool.poetry.dev-dependencies]
-black = {version = "^19.10b0",allow-prereleases = true}
+black = "^19.10b0"
 coverage = "^5.0"
 pyupgrade = "^2.0"
 
