--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,15 @@ zappa = "^0.51.0"
 black = "^19.10b0"
 coverage = "^5.1"
 pyupgrade = "^2.3"
+isort = "^4.3.21"
+
+[tool.isort]
+# https://github.com/psf/black/blob/master/docs/compatible_configs.md#isort
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+line_length = 88
 
 [tool.black]
 line-length = 88
