--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_script:
 
 script:
   - poetry run pyupgrade --py37-plus $(find . -name '*.py')
+  - poetry run isort --check-only
   - poetry run black . --check
   - poetry run coverage run -m unittest
 
