--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python-dotenv = "^0.13.0"
 Flask-Testing = "^0.8.0"
 flask-wtf = "^0.14.3"
 zappa = "^0.51.0"
+loginpass = "^0.5"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
