--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,10 +19,8 @@ zappa = "^0.52.0"
 loginpass = "^0.5"
 
 [tool.poetry.dev-dependencies]
-black = "^20.8b1"
 coverage = "^5.3"
-pyupgrade = "^2.7"
-isort = "^5.6.4"
+opstrich = "^0.2.0"
 
 [tool.isort]
 profile = "black"
