--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       - run: cp .env-sample .env
       - run: poetry run inv check.all
       - run: poetry run coverage run -m unittest
-      - run: bash <(curl -s https://codecov.io/bash)
+      - uses: actions/codecov-action@v1
 
   deploy:
     runs-on: ubuntu-20.04
@@ -31,3 +31,7 @@ jobs:
       - run: poetry install
 
       - run: poetry run inv ci-deploy
+        env:
+          DECRYPT_PASSWORD: ${{ secrets.DECRYPT_PASSWORD }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
